--- a/README
+++ b/README
@@ -1,8 +1,5 @@
-Welcome to your Appcelerator Titanium Mobile Project
-
-
-
-
+codemashsessions2010
+A personal session scheduler for CodeMash 2010
 
 
 ----------------------------------
